# Ashenvale

./: .gitmodules  CMakeLists.txt  README.md
configs/: shader.h.in
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/src/renderer/: device.cpp
shaders/: depth_ps.hlsl  geometry.hlsl  normal_gs.hlsl  normal_ps.hlsl  normal_vs.hlsl  object.hlsl  pbr_ps.hlsl  pbr_vs.hlsl  ps.hlsl  quad_ps.hlsl  quad_vs.hlsl  shadow_vs.hlsl  skydome_ps.hlsl  skydome_vs.hlsl  viewport_ps.hlsl  vs.hlsl  wireframe_ps.hlsl
source/: CMakeLists.txt  main.cpp
source/editor/: console.cpp  console.h  editor.cpp  editor.h  inspector.cpp  inspector.h  scene.cpp  scene.h  settings.cpp  settings.h  viewport.cpp  viewport.h
source/imgui/: GraphEditor.cpp  ImCurveEdit.cpp  ImGradient.cpp  ImGuizmo.cpp  ImSequencer.cpp  imgui.h
source/profiler/: profiler.h
source/renderer/: camera.cpp  camera.h  device.cpp  device.h  render_graph.cpp  render_graph.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_compiler.cpp  shader_compiler.h  swapchain.cpp  swapchain.h
source/renderer/pipeline/: pipeline.cpp  pipeline.h  shader.cpp  shader.h
source/renderer/render_passes/: clear_pass.cpp  clear_pass.h  debug_depth_pass.cpp  debug_depth_pass.h  debug_wireframe_pass.cpp  debug_wireframe_pass.h  editor_pass.cpp  editor_pass.h  geometry_pass.cpp  geometry_pass.h  normal_pass.cpp  normal_pass.h  object_pass.cpp  object_pass.h  present_pass.cpp  present_pass.h  tonemap_pass.cpp  tonemap_pass.h
source/resource/: resource_manager.cpp  resource_manager.h  uuid.cpp  uuid.h
source/scene/: camera.cpp  camera.h  component.h  scene.cpp  scene.h  skydome.cpp  skydome.h
source/window/: input.cpp  input.h  window.cpp  window.h
